<resources>
    <string name="app_name">거기서 봐</string>
    <string name="login_google">구글 로그인</string>
    <string name="start_without_google">로그인없이 시작</string>
    <string name="fixed_promise">확정된 약속</string>
    <string name="my_promise">만든 약속</string>
    <string name="received_invitation">받은 초대</string>
    <string name="input_email">이메일 주소 입력</string>
    <string name="logout_google">구글 로그아웃</string>
    <string name="app_settings">앱 설정</string>
    <string name="input_address_or_place">주소 또는 장소를 입력</string>
    <string name="notification_on_time">정시에 알림</string>
    <string name="notification_before_10_minutes">10분전에 알림</string>
    <string name="notification_before_30_minutes">30분전에 알림</string>
    <string name="notification_before_1_hours">1시간전에 알림</string>
    <string name="notification_before_2_hours">2시간전에 알림</string>
    <string name="notification_before_6_hours">6시간전에 알림</string>
    <string name="notification_before_1_days">하루전에 알림</string>
    <string name="notification_custom">직접 선택</string>
    <string name="notification_sound_switch">알림 소리 여부</string>
    <string name="notification_sound_selection">알림 소리 선택</string>
    <string name="notification_vibration_switch">알림 진동 여부</string>
    <string name="notification_wakeup_switch">화면 켜짐 여부</string>
    <string name="minute">분</string>
    <string name="hour">시간</string>
    <string name="day">일</string>
    <string name="week">주</string>
    <string name="friendsList">친구목록</string>
    <string name="get_friend_on_friendslist">친구목록에서 가져오기</string>
    <string name="invite_new_friend">새 친구 초대</string>
    <string name="promiseDateTime">약속날짜</string>
    <string name="promiseTitle">약속제목</string>
    <string name="promiseDescription">약속내용</string>
    <string name="promiseInvitedFriends">초대받은 사람들</string>
    <string name="place">장소</string>
    <string name="notification">알림</string>
    <string name="account">계정</string>
    <string name="title_hint">제목 입력</string>
    <string name="placeName">장소명</string>
    <string name="notification_basic_setting">알림 기본 설정</string>
    <string name="notification_screen_switch">화면 켜짐 여부</string>
    <string name="notification_default_settings">알림 기본 설정</string>
    <string name="edit">수정</string>
    <string name="promise_location">약속 장소</string>
    <string name="invitee">초대자</string>
    <string name="refusal">거절</string>
    <string name="acceptance">참여</string>
    <string name="friendsname">친구 이름</string>
    <string name="remove">삭제</string>
    <string name="search_address_or_place">주소 또는 장소검색</string>
    <string name="denied_access_to_calendar">캘린더 접근이 거부되었습니다</string>
    <string name="main_page">메인</string>
    <string name="friend">친구</string>
    <string name="friend_page">친구</string>
    <string name="calendar_page">캘린더</string>
    <string name="local">로컬</string>
    <string name="signout_successful">구글 로그아웃됨</string>
    <string name="signin_successful">구글 로그인 되었습니다</string>
    <string name="add">추가</string>
    <string name="input_name">이름 입력</string>
    <string name="existing_Value">이미 존재하는 값 입니다</string>
    <string name="remind_before">전에 알림</string>
    <string name="use_reminder">알림 사용</string>
    <string name="description_hint">내용 입력</string>
    <string name="addReminder">알림 추가</string>
    <string name="promiseTime">약속 시각</string>
    <string name="promiseDate">약속 날짜</string>
    <string name="save">저장</string>
    <string name="pref_key_never_ask_again_permission_for_access_location">pref_key_never_ask_again_permission_for_access_location</string>
    <string name="request_to_make_gps_on">GPS를 켜주세요</string>
    <string name="ok">확인</string>
    <string name="no">아니오</string>
    <string name="message_needs_location_permission">위치 권한이 필요합니다</string>
    <string name="result_activity_map_center">지도 중앙</string>
    <string name="result_activity_myloc_center">내 위치</string>
    <string name="result_place">장소</string>
    <string name="failed_find_current_location">현재 위치 파악 실패</string>
    <string name="road_addr">도로명</string>
    <string name="region_addr">지번</string>
    <string name="result_address">주소</string>
    <string name="cancel_location">위치 취소</string>
    <string name="select">선택</string>
    <string name="selected_location_in_event">약속 장소</string>
    <string name="address">주소</string>
    <string name="message_click_marker_to_delete">클릭하면 삭제</string>
    <string name="title_asking_to_change_location">위치 변경</string>
    <string name="message_change_location">위치를 변경하시겠습니까?</string>
    <string name="promiseDateTimeFormat">yyyy/M/d E a h:mm</string>
    <string name="update">업데이트</string>
    <string name="close">닫기</string>
    <string name="failed_response_for_invitied_event">초대받은 약속에 대한 응답실패</string>
    <string name="response_accept_to_invited_event">약속 참여 확정</string>
    <string name="response_decline_to_invited_event">약속 거부함</string>
    <string name="no_promise_location">약속 장소 없음</string>
    <string name="noDescription">내용 없음</string>
    <string name="new_promise">새로운 약속</string>
    <string name="edit_promise">약속 수정</string>
    <string name="failed_add_new_promise">새로운 약속 생성 실패</string>
    <string name="promise_info">약속 정보</string>
    <string name="promise_reminder_notification_channel_name">약속 알림</string>
    <string name="promise_reminder_notification_channel_description">약속 시간 이전에 알림을 표시합니다</string>
    <string name="sync_calendar_channel_name">약속 새로고침</string>
    <string name="sync_calendar_channel_description">약속 새로고침 시 알림을 표시합니다</string>
    <string name="no_response_to_invited_event">응답 대기</string>
    <string name="no_attendee">참석자 없음</string>
    <string name="needs_calendar_permission">캘린더 사용 권한이 필요합니다</string>
    <string name="check_permissions">권한 확인</string>
    <string name="empty_fixed_promises">확정된 약속이 없습니다</string>
    <string name="empty_my_promises">내가 만든 약속이 없습니다</string>
    <string name="empty_received_invitation_promises">초대받은 약속이 없습니다</string>
    <string name="empty_friends">친구 목록이 비었습니다</string>
    <string name="empty_promises">약속이 없습니다</string>
    <string name="go_to_today">오늘로 이동</string>
    <string name="go_to_first_selected_position">선택한 날짜로 이동</string>
    <string name="promise_reminder">약속 알림</string>
    <string name="wind_direction_N">북</string>
    <string name="wind_direction_NNE">북북동</string>
    <string name="wind_direction_NE">북동</string>
    <string name="wind_direction_ENE">동북동</string>
    <string name="wind_direction_E">동</string>
    <string name="wind_direction_ESE">동남동</string>
    <string name="wind_direction_SE">남동</string>
    <string name="wind_direction_SSE">남남동</string>
    <string name="wind_direction_S">남</string>
    <string name="wind_direction_SSW">남남서</string>
    <string name="wind_direction_SW">남서</string>
    <string name="wind_direction_WSW">서남서</string>
    <string name="wind_direction_W">서</string>
    <string name="wind_direction_WNW">서북서</string>
    <string name="wind_direction_NW">북서</string>
    <string name="wind_direction_NNW">북북서</string>
    <string name="kma_sky_1_clear">맑음</string>
    <string name="kma_sky_3_mostly_cloudy">구름 많음</string>
    <string name="kma_sky_4_overcast">흐림</string>
    <string name="kma_pty_0_not">강수없음</string>
    <string name="kma_pty_1_rain">비</string>
    <string name="kma_pty_2_rain_and_snow">진눈깨비</string>
    <string name="kma_pty_3_snow">눈</string>
    <string name="kma_pty_4_showers">소나기</string>
    <string name="kma_pty_5_raindrop">빗방울</string>
    <string name="kma_pty_6_raindrop_and_snow_blizzard">빗방울눈날림</string>
    <string name="kma_pty_7_snow_blizzard">눈날림</string>
    <string name="kma_mid_clear">맑음</string>
    <string name="kma_mid_mostly_cloudy">구름많음</string>
    <string name="kma_mid_mostly_cloudy_rain">구름많고 비</string>
    <string name="kma_mid_mostly_cloudy_snow">구름많고 눈</string>
    <string name="kma_mid_mostly_cloudy_rain_and_snow">구름많고 비/눈</string>
    <string name="kma_mid_mostly_cloudy_shower">구름많고 소나기</string>
    <string name="kma_mid_overcast">흐림</string>
    <string name="kma_mid_overcast_rain">흐리고 비</string>
    <string name="kma_mid_overcast_snow">흐리고 눈</string>
    <string name="kma_mid_overcast_rain_and_snow">흐리고 비/눈</string>
    <string name="kma_mid_overcast_shower">흐리고 소나기</string>
    <string name="kma_mid_shower">소나기</string>
    <string name="kma_mid_sleet">비/눈</string>
    <string name="TheTemperatureIsTheSameAsYesterday">어제와 기온이 같아요</string>
    <string name="thanYesterday">어제보다</string>
    <string name="higherTemperature">높은 기온</string>
    <string name="lowerTemperature">낮은 기온</string>
    <string name="wind_strength_1">약한 바람</string>
    <string name="wind_strength_2">약간 강한 바람</string>
    <string name="wind_strength_3">강한 바람</string>
    <string name="wind_strength_4">매우 강한 바람</string>
    <string name="wind_strength_1_simple">약</string>
    <string name="wind_strength_2_simple">약간 강</string>
    <string name="wind_strength_3_simple">강</string>
    <string name="wind_strength_4_simple">매우 강</string>
    <string name="failed_signin_account">로그인 실패</string>
    <string name="syncCalendar">약속 새로고침</string>
    <string name="last_update_datetime">마지막 업데이트</string>
    <string name="noData">정보없음</string>
    <string name="no_signin_account">구글계정을 로그인해주세요</string>
    <string name="loading_weather_data">날씨 불러오는 중</string>
    <string name="failed_loading_weather_data">날씨 정보 불러오기 오류</string>
    <string name="failed_sync_calendar">새로고침 실패</string>
    <string name="input_error_email_and_name">이메일과 이름을 확인해주세요</string>
    <string name="input_error_email">이메일을 확인해주세요</string>
    <string name="input_error_name">이름을 확인해주세요</string>
    <string name="me">나</string>
    <string name="attendee_info">참석자 정보</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="unavailable_update">업데이트 불가</string>
    <string name="no_title">제목없음</string>
    <string name="declined">불참</string>
    <string name="no_response">미 응답</string>
    <string name="response">응답</string>
    <string name="cancel">취소</string>
    <string name="msg_refusal_response_to_promise">약속 참여 거부하시겠습니까?</string>
    <string name="msg_accept_response_to_promise">약속 참여하시겠습니까?</string>
    <string name="detail_promise">약속 상세</string>
    <string name="notification_sound_volume">소리 크기</string>
    <string name="weather">날씨</string>
    <string name="around_place">주변 장소</string>
    <string name="MT1">대형마트</string>
    <string name="CS2">편의점</string>
    <string name="PS3">어린이집,유치원</string>
    <string name="SC4">학교</string>
    <string name="AC5">학원</string>
    <string name="PK6">주차장</string>
    <string name="OL7">주유소,충전소</string>
    <string name="SW8">지하철역</string>
    <string name="BK9">은행</string>
    <string name="CT1">문화시설</string>
    <string name="AG2">중개업소</string>
    <string name="PO3">공공기관</string>
    <string name="AT4">관광명소</string>
    <string name="AD5">숙박</string>
    <string name="FD6">음식점</string>
    <string name="CE7">카페</string>
    <string name="HP8">병원</string>
    <string name="PM9">약국</string>
    <string name="search_criteria">검색 기준</string>
    <string name="search_max_range">검색 범위</string>
    <string name="rainyPosibility">강수 확률</string>
    <string name="todayCurrentWeather">현재날씨</string>
    <string name="promiseDayCurrentWeather">당일 예상날씨</string>
    <string name="expected_forecast">예상 날씨</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="departureLocation">출발지</string>
    <string name="arrivalLocation">목적지</string>
    <string name="time">소요시간</string>
    <string name="distance">거리</string>
    <string name="reCalculate">재 계산</string>
    <string name="navermap">네이버지도</string>
    <string name="kakaomap">카카오맵</string>
    <string name="msg_open_map_app_to_find_routes">길찾기를 위해 사용할 지도 앱을 선택하여 주세요</string>
    <string name="add_friend">친구 추가</string>
    <string name="add_voteitem">항목 추가</string>
    <string name="again_vote">다시 투표</string>
    <string name="end_vote">투표 종료</string>
</resources>