<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/notificationWhatTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/notification_before_1_hours"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/removeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/remove"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
            android:id="@+id/sound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_volume_up_24"
            android:gravity="center"
            android:text="@string/notification_sound_selection"
            android:textColor="@color/black"/>

            <TextView
                android:id="@+id/vibration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_vibration_24"
                android:gravity="center"
                android:text="@string/notification_vibration_switch"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/wakeUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_smartphone_24"
                android:gravity="center"
                android:text="@string/notification_wakeup_switch"
                android:textColor="@color/black"/>


        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>